--- a/views/paytm/index.ejs
+++ b/views/paytm/index.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Please wait....</h1>
-    <form name="f1" id="form1" method="post" action="http://192.168.1.4:3002/api/paytm/request">
+    <form name="f1" id="form1" method="post" action="http://192.168.1.5:3002/api/paytm/request">
         <table>
             <tbody>
         <input type="hidden" id="ORDER_ID" name="ORDER_ID" value="ORDER@289"/>
@@ -18,9 +18,9 @@
           <input type="hidden" id="CUST_ID" name="CUST_ID" value="CUSTOMER@1"/>
           <input type="hidden" id="CHANNEL_ID" name="CHANNEL_ID" value="WEB"/>
           <input type="hidden" id="TXN_AMOUNT" name="TXN_AMOUNT" value="100"/>
-          <input type="hidden" id="WEBSITE" name="WEBSITE" value="WEBSTAGING"/>
-          <input type="hidden" id="MID" name="MID" value="aFXLEN49977660349427"/>
-          <input type="hidden" id="PAYTM_MERCHANT_KEY" name="PAYTM_MERCHANT_KEY" value="qzyWd3oIS3PA@kA@"/>
+          <input type="hidden" id="WEBSITE" name="WEBSITE" value="DEFAULT"/>
+          <input type="hidden" id="MID" name="MID" value="hxiYBb88769818165091"/>
+          <input type="hidden" id="PAYTM_MERCHANT_KEY" name="PAYTM_MERCHANT_KEY" value="ZHdiFizLeS2T1i%j"/>
           <!-- <button type="submit">Submit</button> -->
         </tbody>
     </table>
