--- a/views/paytm/index.ejs
+++ b/views/paytm/index.ejs
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Please wait....</h1>
-    <form name="f1" id="form1" method="post" action="http://192.168.1.5:3002/api/paytm/request">
+    <form name="f1" id="form1" method="post" action="https://aquses.herokuapp.com/api/paytm/request">
         <table>
             <tbody>
         <input type="hidden" id="ORDER_ID" name="ORDER_ID" value="ORDER@289"/>
